--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ description: >- # used by seo meta and the atom feed
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://goldleo1.github.io"
 
+plugins:
+  - jekyll-sitemap
+
 github:
   username: goldleo1 # change to your GitHub username
 
